exports[`analysis rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "name": "test-analysis",
    "summary": Object {
      "avgDistance": 0,
      "avgTravelTime": 0,
      "savingsPerTrip": 0,
      "savingsPerTripYear": 0,
      "savingsTotalPerDay": 0,
      "savingsTotalPerYear": 0,
    },
    "trips": Array [],
  },
]
`;

exports[`analysis rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "name": "test-analysis",
  "summary": Object {
    "avgDistance": 0,
    "avgTravelTime": 0,
    "savingsPerTrip": 0,
    "savingsPerTripYear": 0,
    "savingsTotalPerDay": 0,
    "savingsTotalPerYear": 0,
  },
  "trips": Array [],
}
`;
